--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "description": "React TypeScript on Replit, using Vite bundler",
   "scripts": {
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist",
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "deploy": "gh-pages -d dist",
+    "dev": "npx vite",
+    "build": "npx vite build",
+    "preview": "npx vite preview"
   },
+
   "keywords": [],
   "author": "",
   "license": "ISC",
